[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Login.gd" type="Script" id=1]

[node name="Login" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="UsernameLabel" type="Label" parent="."]
margin_left = 143.7
margin_top = 140.827
margin_right = 213.7
margin_bottom = 154.827
text = "Username:"

[node name="Username" type="LineEdit" parent="UsernameLabel"]
margin_left = -37.2649
margin_top = 26.5033
margin_right = 118.735
margin_bottom = 59.5033

[node name="PasswordLabel" type="Label" parent="."]
margin_left = 147.7
margin_top = 213.827
margin_right = 214.7
margin_bottom = 233.827
text = "Password:"

[node name="Password" type="LineEdit" parent="PasswordLabel"]
margin_left = -38.7546
margin_top = 23.8406
margin_right = 115.245
margin_bottom = 57.8406
secret = true

[node name="Sign-In" type="Button" parent="."]
margin_left = 137.919
margin_top = 306.642
margin_right = 232.919
margin_bottom = 347.642
text = "Sign In"

[node name="Register" type="Button" parent="."]
margin_left = 128.449
margin_top = 457.12
margin_right = 244.449
margin_bottom = 496.12
text = "Register"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="button_up" from="Sign-In" to="." method="login"]
[connection signal="button_up" from="Register" to="." method="_on_Register_button_up"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
